k8s/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: birthday-api
  namespace: birthday-app
spec:
  hosts:
  - "*"
  gateways:
  - birthday-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: birthday-api.birthday-app.svc.cluster.local
        port:
          number: 80
